--- a/main.html
+++ b/main.html
@@ -4,10 +4,43 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="card-deck">
 	<!-- the entire body must be written by student -->
+	<h1>welcome to Sync5</h1>
+	<div class="card">
+  <div class="card-header">New Features</div>
+  <div class="card-body">
+    <h5 class="card-title">Mobile and Tablet support</h5>
+    <p class="card-text">With this new update you will br able to sync your work across large number of platforms.</p>
+    <a href="#" class="btn btn-primary">Read more</a>
+  </div>
+</div>
+	<br>
+	<div class="card-2 bg-red-100">
+  <div class="card-header">Alert</div>
+  <div class="card-body">
+    <h5 class="card-title">Node Dead</h5>
+  <p class="card-text">node 5 (east-us) is offline for last 12 days </p>
+	  
+
+	<div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+	<p class="card-text">President under Pressure</p>  
+    <p class="card-text">The US president is under pressure tp respond to a widespread cyber-attack linked to China.</p>
+	<p class="card-text"><span class="text-gray-500">Last updated 12 mins ago</span></p>  
+  </div>
+</div>  
+
+	  
+  </div>
+</div>
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
