--- a/main.html
+++ b/main.html
@@ -19,25 +19,22 @@
   </div>
 </div>
 	<br>
-	<div class="card-2 bg-red-100">
+	<div class="card-2 bg-red-100 bg-danger">
   <div class="card-header">Alert</div>
   <div class="card-body">
     <h5 class="card-title">Node Dead</h5>
   <p class="card-text">node 5 (east-us) is offline for last 12 days </p>
-	  
-
+  </div>
+</div>
 	<div class="card" style="width: 18rem;">
   <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
 	<p class="card-text">President under Pressure</p>  
     <p class="card-text">The US president is under pressure tp respond to a widespread cyber-attack linked to China.</p>
-	<p class="card-text"><span class="text-gray-500">Last updated 12 mins ago</span></p>  
+	<p class="card-text text-muted"><span class="text-gray-500">Last updated 12 mins ago</span></p>  
   </div>
 </div>  
 
-	  
-  </div>
-</div>
 
 
 	
