--- a/main.html
+++ b/main.html
@@ -19,8 +19,8 @@
   </div>
 </div>
 	<br>
-	<div class="card-2 bg-red-100 bg-danger">
-  <div class="card-header bg-danger">Alert</div>
+	<div class="card-2 bg-danger">
+  <div class="card-header">Alert</div>
   <div class="card-body">
     <h5 class="card-title">Node Dead</h5>
   <p class="card-text">node 5 (east-us) is offline for last 12 days </p>
