--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
   </div>
 </div>
 	<br>
-	<div class="card-2 bg-danger">
+	<div class="card bg-danger">
   <div class="card-header">Alert</div>
   <div class="card-body">
     <h5 class="card-title">Node Dead</h5>
